<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#7AD1FA"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/monday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/sunny1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="Sunny AF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="25C - 28C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/tuesday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/rainy1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="It's pourin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="19C - 22C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/wednesday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/rainy1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="Pouring all day" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="19C - 21C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/thursday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="Nice lovely day" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="22C - 23C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/friday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/sunny1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="AAAAA IT BURNS" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="30C - 32C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/saturday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="Snore" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="12C - 22C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Sunday" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="Idk cold?" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="12C - 15C" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>